# luametatex-optional-libraries

./: .gitmodules  CMakeLists.txt  README.md  cross-windows.cmake
cmake/: mingw-32.cmake  mingw-64.cmake
